# nyan

./: .gitignore  Cargo.toml  Dockerfile  PLANNING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
assets/: all.xcf  avatar.xcf  house.xcf  template.xcf
migrations/: 20210508171609_index.sql
src/: config.rs  constants.rs  database.rs  events.rs  keys.rs  main.rs
src/commands/: mod.rs
src/commands/cats/: create.rs  mod.rs  profile.rs  travel.rs
src/commands/economy/: mod.rs
src/commands/misc/: help.rs  mod.rs  ping.rs
src/commands/treats/: mod.rs  treats.rs
src/models/: cat.rs
src/utils/: checks.rs  collectors.rs  images.rs  mod.rs
