[package]
name = "nyan"
version = "0.1.0"
authors = ["Dominic Harris <tastykake563@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.5", features = ["collector", "gateway", "builder", "standard_framework", "http", "model", "client", "framework", "utils"] }

tokio = { version = "1.5.0", features = ["full"]}
futures = "0.3.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

tracing = "0.1"
tracing-subscriber = "0.2.0"

toml = "0.5"

image = "0.23"
imageproc = "0.22.0"

lazy_static = "1.4.0"
once_cell = "1.7.2"

chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.5.1", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono"] }

rand = { version = "0.8.0", features = ["std"] }

sentry = "0.21.0"
