[package]
name = "nyan"
version = "0.1.0"
authors = ["Dominic Harris <tastykake563@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", features = ["collector", "gateway", "builder", "standard_framework", "http", "model", "client", "framework", "utils"] }

tokio = { version = "1.11.0", features = ["full"]}
futures = "0.3.21"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

tracing = "0.1"
tracing-subscriber = "0.2"

toml = "0.5"

image = "0.23"
imageproc = "0.22"

lazy_static = "1.4"
once_cell = "1.8"

chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.5.7", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono"] }

rand = { version = "0.8.4", features = ["std"] }

sentry = "0.23"
